[gd_scene load_steps=6 format=3 uid="uid://2kvm1khco28u"]

[ext_resource type="Script" uid="uid://bim3lxjt5xq7q" path="res://scripts/game_stacky.gd" id="1_4coo7"]
[ext_resource type="Texture2D" uid="uid://bfynpd1bi7yxq" path="res://textures/ground.png" id="1_42g4j"]
[ext_resource type="Script" uid="uid://ijkvn3extq8a" path="res://scripts/stacky_level.gd" id="3_f3wrd"]
[ext_resource type="SpriteFrames" uid="uid://ducky85cka" path="res://textures/ducky.tres" id="3_hyg65"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4coo7"]
size = Vector2(115, 56)

[node name="game_stacky" type="Node2D"]
script = ExtResource("1_4coo7")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1.931, 1.931)
anchor_mode = 0

[node name="FloorSprite" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(1024, 1248)
texture = ExtResource("1_42g4j")
region_enabled = true
region_rect = Rect2(0, 0, 2048, 64)

[node name="Level" type="Node2D" parent="."]
script = ExtResource("3_f3wrd")

[node name="BlockStack" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 91
text = "0"
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "DEBUG TTEST"

[node name="Bird" type="CharacterBody2D" parent="."]

[node name="BirdSprite" type="AnimatedSprite2D" parent="Bird"]
scale = Vector2(1.931, 1.931)
sprite_frames = ExtResource("3_hyg65")
animation = &"flap"
frame = 1
frame_progress = 0.154324

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_4coo7")
